--- a/quiz.css
+++ b/quiz.css
@@ -1,12 +1,6 @@
-*, *::before, *::after {
+* {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-:root {
-    --hue-neutral: 200;
-    --hue-wrong: 0;
-    --hue-correct: 145;
 }
 
 body {
@@ -41,7 +35,7 @@ body {
     border-color: black;
 }
 
-.start-btn, .next-btn {
+.play-btn, .next-btn {
     font-size: 30px;
     font-weight: bold;
     padding: 15px;
